quick fix: hide shader on mobile as it caused problems on SOME screens

--- a/index.css
+++ b/index.css
@@ -407,6 +407,12 @@ body:not(.user-is-tabbing) a:focus {
     /*transform:translate(-50%,-50%); /* scale(0.5);*/
 }
 
+@media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px) {
+    #glslCanvas { display: none;}
+ }
+
 .header {
     background: var(--pinkish);
     height: 100vh;
